--- a/index.html
+++ b/index.html
@@ -74,6 +74,32 @@
 									</div>
 								</div>
 								<div class="timeline-item">
+									<div class="timeline-item-date">лето&nbsp;2020&nbsp;- осень&nbsp;2020</div>
+                                    <div class="timeline-item-trigger"><i class="fa fa-plus"></i></div>
+                                    <div class="timeline-item-content">
+										<div class="timeline-item-arrow"><i></i></div>
+										<h3>Parky</h3>
+										<div class="timeline-item-content-spoiler" style="display: none;">
+											<p><a href="https://github.com/antonskvortsov10/Parky">Репозиторий с исходным кодом</a></p>
+											<h3>Цель: создание веб-приложения о национальных парках.</h3>
+											<p>Используемые языки, фреймворки и технологии:</p>
+                                            <ul class="fa-ul">
+                                                <li><i class="fa-li fa fa-check"></i>C#</li>
+												<li><i class="fa-li fa fa-check"></i>.NET Core</li>
+												<li><i class="fa-li fa fa-check"></i>ASP.NET Core Web API</li>
+												<li><i class="fa-li fa fa-check"></i>ASP.NET Core MVC</li>
+												<li><i class="fa-li fa fa-check"></i>Entity framework Core</li>
+												<li><i class="fa-li fa fa-check"></i>LINQ</li>
+												<li><i class="fa-li fa fa-check"></i>MS SQL</li>
+												<li><i class="fa-li fa fa-check"></i>Ajax</li>
+												<li><i class="fa-li fa fa-check"></i>JQuery</li>
+												<li><i class="fa-li fa fa-check"></i>Bootstrap</li>
+												<li><i class="fa-li fa fa-check"></i>Razor</li>
+											</ul>
+										</div>
+									</div>
+								</div>
+								<div class="timeline-item">
 									<div class="timeline-item-date">весна&nbsp;2020&nbsp;- лето&nbsp;2020</div>
                                     <div class="timeline-item-trigger"><i class="fa fa-plus"></i></div>
                                     <div class="timeline-item-content">
@@ -81,7 +107,7 @@
 										<h3>Vidly</h3>
 										<div class="timeline-item-content-spoiler" style="display: none;">
 											<p><a href="https://github.com/antonskvortsov10/Vidly">Репозиторий с исходным кодом</a></p>
-											<h3>Цель: создание веб-приложения для системы кинопроката.</h3>
+											<h3>Цель: создание веб-приложения для использования в магазинах по продаже фильмов.</h3>
 											<p>Используемые языки, фреймворки и технологии:</p>
                                             <ul class="fa-ul">
                                                 <li><i class="fa-li fa fa-check"></i>C#</li>
@@ -96,45 +122,6 @@
 												<li><i class="fa-li fa fa-check"></i>Bootstrap</li>
 												<li><i class="fa-li fa fa-check"></i>Razor</li>
 											</ul>
-										</div>
-									</div>
-								</div>
-								<div class="timeline-item">
-									<div class="timeline-item-date">весна&nbsp;2020</div>
-                                    <div class="timeline-item-trigger"><i class="fa fa-plus"></i></div>
-                                    <div class="timeline-item-content">
-										<div class="timeline-item-arrow"><i></i></div>
-										<h3>CRM</h3>
-										<div class="timeline-item-content-spoiler" style="display: none;">
-											<p><a href="https://github.com/antonskvortsov10/ShopCRM">Репозиторий с исходным кодом</a></p>
-											<h3>Цель: разработка CRM-системы для магазина.</h3>
-											<p>Используемые языки и библиотеки:</p>
-                                            <ul class="fa-ul">
-												<li><i class="fa-li fa fa-check"></i>C#</li>
-                                                <li><i class="fa-li fa fa-check"></i>.NET Framework</li>
-                                                <li><i class="fa-li fa fa-check"></i>WinForms</li>
-                                                <li><i class="fa-li fa fa-check"></i>MS SQL</li>
-                                            </ul>
-										</div>
-									</div>
-								</div>
-								<div class="timeline-item">
-									<div class="timeline-item-date">весна&nbsp;2020</div>
-                                    <div class="timeline-item-trigger"><i class="fa fa-plus"></i></div>
-                                    <div class="timeline-item-content">
-										<div class="timeline-item-arrow"><i></i></div>
-										<h3>Система электронного документооборота</h3>
-										<div class="timeline-item-content-spoiler" style="display: none;">
-											<p><a href="https://github.com/antonskvortsov10/EDMS">Репозиторий с исходным кодом</a></p>
-											<h3>Цель: разработка системы электронного документооборота.</h3>
-											<p>Используемые языки и библиотеки:</p>
-                                            <ul class="fa-ul">
-												<li><i class="fa-li fa fa-check"></i>C#</li>
-                                                <li><i class="fa-li fa fa-check"></i>.NET Framework</li>
-                                                <li><i class="fa-li fa fa-check"></i>WinForms</li>
-                                                <li><i class="fa-li fa fa-check"></i>ADO.NET</li>
-                                                <li><i class="fa-li fa fa-check"></i>MS SQL</li>
-                                            </ul>
 										</div>
 									</div>
 								</div>
@@ -338,7 +325,6 @@
 										<p>ВКонтакте: <a href="https://vk.com/anton_skvortsov10" target="_blank">vk.com/anton_skvortsov10</a></p>
 									</li>
 								</ul>
-								
 							</div>
 						</div>
 					</div>
