--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 					<div class="papers">
 						<div class="section-content">
 							<h2>Профессиональные навыки</h2>
-							<p>Специализируюсь в области backend разработки на C#/.NET (ASP.NET MVC, ASP.NET WebAPI, Entity framework (Code First), LINQ, ASP.NET Core, WinForms) и PHP (Yii, Laravel).</p>
+							<p>Специализируюсь в области разработки программного обеспечения, backend разработки на C#/.NET (ASP.NET MVC, ASP.NET WebAPI, Entity framework (Code First), LINQ, ASP.NET Core, WinForms) и PHP (Yii, Laravel, Wordpress).</p>
 							<p>В разное время программировал на Python, C++/Qt, C, MATLAB.</p>
 							<p>Хорошо разбираюсь в парадигме ООП, паттернах проектирования, алгоритмах и структурах данных. Умею работать с многопоточностью и асинхронным программированием. Также умею работать с Git, знаю основы работы с Docker.</p>
 							<p>Владею основами frontend разработки (HTML, CSS, JavaScript, JQuery, Bootstrap). Уважаю хорошие UI/UX-решения.</p>
@@ -55,7 +55,7 @@
 							<p>Работаю со следующими СУБД: MySQL, MS SQL Server, PostgreSQL.</p>
 							<p>В качестве сред разработки использую PHPStorm и MS Visual Studio. Также люблю использовать редактор Visual Studio Code.</p>
 							<p>Выпускник МГУ им. М.В. Ломоносова (механико-математический факультет). Имею степень магистра в области математики и компьютерных наук (специализация: геометрия и топология). Также имею степень бакалавра по профильному направлению подготовки (направление: фундаментальная информатика и информационные технологии, профиль: инженерия программного обеспечения). Программированием начал заниматься ещё учась в средней школе.</p>
-							<p>Английским языком владею на достаточно высоком уровне. Люблю осваивать новые технологии и подходы в разработке. Хорошо работаю в команде.</p>
+							<p>Английским языком владею на достаточно высоком уровне. Люблю осваивать новые технологии и подходы в разработке.</p>
 							<p>С некоторыми моими проектами Вы можете ознакомиться ниже.</p>
 						</div>
 					</div>
