--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<div class="main wrapper clearfix">
 			<aside>
 				<div class="sidebar-header">
-					<h2>Антон Скворцов <span>C#/.NET разработчик</span><span>Backend разработчик</span></h2>
+					<h2>Антон Скворцов <span>Программист</span><span>Backend разработчик</span></h2>
 				</div>
 				<nav>
 					<ul>
@@ -40,15 +40,15 @@
 					<img src="img/ProfilePhoto.jpg" alt="" class="img-circle">
 					<h1>Антон Скворцов</h1>
 					<hr>
-					<h3>C#/.NET разработчик, Backend разработчик.<br> Живу в Москве. Занимаюсь разработкой программного обеспечения, backend разработкой. Владею английским языком на достаточно высоком уровне. Люблю осваивать новые технологии и подходы в разработке.</h3>
+					<h3>Программист, Backend разработчик.<br> Живу в Москве. Занимаюсь разработкой программного обеспечения, backend разработкой. Владею английским языком на достаточно высоком уровне. Люблю осваивать новые технологии и подходы в разработке.</h3>
 					<hr>
 				</header>
 				<section id="skills">
 					<div class="papers">
 						<div class="section-content">
 							<h2>Профессиональные навыки</h2>
-							<p>Специализируюсь в области разработки программного обеспечения, backend разработки на C#/.NET (ASP.NET MVC, ASP.NET WebAPI, Entity framework (Code First), LINQ, ASP.NET Core, WinForms) и PHP (Yii, Laravel, Wordpress).</p>
-							<p>В разное время программировал на Python, C++/Qt, C, MATLAB.</p>
+							<p>Специализируюсь в области разработки программного обеспечения, backend разработки на C#/.NET (ASP.NET MVC, ASP.NET WebAPI, Entity framework, LINQ, ASP.NET Core, WinForms) и PHP (Yii, Laravel).</p>
+							<p>В разное время программировал на Ruby (Ruby on Rails), Python, C++/Qt, C.</p>
 							<p>Хорошо разбираюсь в парадигме ООП, паттернах проектирования, алгоритмах и структурах данных. Умею работать с многопоточностью и асинхронным программированием. Также умею работать с Git, знаю основы работы с Docker.</p>
 							<p>Владею основами frontend разработки (HTML, CSS, JavaScript, JQuery, Bootstrap). Уважаю хорошие UI/UX-решения.</p>
 							<p>Составляю SQL-запросы различного уровня сложности, умею проектировать архитектуру БД.</p>
