--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<div class="main wrapper clearfix">
 			<aside>
 				<div class="sidebar-header">
-					<h2>Антон Скворцов <span>Программист</span><span>Backend разработчик</span></h2>
+					<h2>Антон Скворцов <span>C#/.NET</span><span>Backend разработчик</span></h2>
 				</div>
 				<nav>
 					<ul>
@@ -47,13 +47,13 @@
 					<div class="papers">
 						<div class="section-content">
 							<h2>Профессиональные навыки</h2>
-							<p>Специализируюсь в области разработки программного обеспечения, backend разработки на C#/.NET (ASP.NET MVC, ASP.NET WebAPI, Entity framework, LINQ, ASP.NET Core, WinForms) и PHP (Yii, Laravel).</p>
-							<p>В разное время программировал на Ruby (Ruby on Rails), Python, C++/Qt, C.</p>
+							<p>Специализируюсь в области разработки программного обеспечения, backend разработки на C#/.NET (ASP.NET MVC, ASP.NET WebAPI, Entity framework, LINQ, WinForms, в последнее время предпочитаю разрабатывать на ASP.NET Core).</p>
+							<p>В разное время писал на Python, Ruby (Ruby on Rails), C++/Qt, C, MATLAB.</p>
 							<p>Хорошо разбираюсь в парадигме ООП, паттернах проектирования, алгоритмах и структурах данных. Умею работать с многопоточностью и асинхронным программированием. Также умею работать с Git, знаю основы работы с Docker.</p>
 							<p>Владею основами frontend разработки (HTML, CSS, JavaScript, JQuery, Bootstrap). Уважаю хорошие UI/UX-решения.</p>
 							<p>Составляю SQL-запросы различного уровня сложности, умею проектировать архитектуру БД.</p>
 							<p>Работаю со следующими СУБД: MySQL, MS SQL Server, PostgreSQL.</p>
-							<p>В качестве сред разработки использую PHPStorm и MS Visual Studio. Также люблю использовать редактор Visual Studio Code.</p>
+							<p>В качестве среды разработки использую MS Visual Studio. Также люблю использовать редактор Visual Studio Code.</p>
 							<p>Выпускник МГУ им. М.В. Ломоносова (механико-математический факультет). Имею степень магистра в области математики и компьютерных наук (специализация: геометрия и топология). Также имею степень бакалавра по профильному направлению подготовки (направление: фундаментальная информатика и информационные технологии, профиль: инженерия программного обеспечения). Программированием начал заниматься ещё учась в средней школе.</p>
 							<p>Английским языком владею на достаточно высоком уровне. Люблю осваивать новые технологии и подходы в разработке.</p>
 							<p>С некоторыми моими проектами Вы можете ознакомиться ниже.</p>
