--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<div class="main wrapper clearfix">
 			<aside>
 				<div class="sidebar-header">
-					<h2>Антон Скворцов <span>C#/.NET</span><span>Backend разработчик</span></h2>
+					<h2>Антон Скворцов <span>C#/.NET разработчик</span><span>Backend разработчик</span></h2>
 				</div>
 				<nav>
 					<ul>
