--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 						<div class="section-content">
 							<h2>Профессиональные навыки</h2>
 							<p>Специализируюсь в области разработки программного обеспечения, backend разработки на C#/.NET (ASP.NET MVC, ASP.NET WebAPI, Entity framework, LINQ, WinForms, в последнее время предпочитаю разрабатывать на ASP.NET Core).</p>
-							<p>В разное время писал на Python, PHP, C++/Qt, C, MATLAB.</p>
+							<p>В разное время писал на Python/Django, PHP, C++/Qt, C, MATLAB.</p>
 							<p>Хорошо разбираюсь в парадигме ООП, паттернах проектирования, алгоритмах и структурах данных. Умею работать с многопоточностью и асинхронным программированием. Также умею работать с Git, знаю основы работы с Docker.</p>
 							<p>Владею основами frontend разработки (HTML, CSS, JavaScript, JQuery, Bootstrap). Уважаю хорошие UI/UX-решения.</p>
 							<p>Составляю SQL-запросы различного уровня сложности, умею проектировать архитектуру БД.</p>
