--- a/index.html
+++ b/index.html
@@ -94,7 +94,8 @@
 												<li><i class="fa-li fa fa-check"></i>Ajax</li>
 												<li><i class="fa-li fa fa-check"></i>JQuery</li>
 												<li><i class="fa-li fa fa-check"></i>Bootstrap</li>
-												<li><i class="fa-li fa fa-check"></i>Razor</li>
+												<li><i class="fa-li fa fa-check"></i>Postman</li>
+												<li><i class="fa-li fa fa-check"></i>Swagger</li>
 											</ul>
 										</div>
 									</div>
@@ -120,7 +121,6 @@
 												<li><i class="fa-li fa fa-check"></i>Ajax</li>
 												<li><i class="fa-li fa fa-check"></i>JQuery</li>
 												<li><i class="fa-li fa fa-check"></i>Bootstrap</li>
-												<li><i class="fa-li fa fa-check"></i>Razor</li>
 											</ul>
 										</div>
 									</div>
