--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                                     <div class="timeline-item-trigger"><i class="fa fa-plus"></i></div>
                                     <div class="timeline-item-content">
 										<div class="timeline-item-arrow"><i></i></div>
-										<h3>Клиент-сервер</h3>
+										<h3>TCP/UDP клиент-сервер</h3>
 										<div class="timeline-item-content-spoiler" style="display: none;">
 											<p><a href="https://github.com/antonskvortsov10/Client-and-Server">Репозиторий с исходным кодом</a></p>
 											<h3>Цель: создание сокетных клиентов и серверов (с использованием TCP и UDP).</h3>
@@ -191,6 +191,22 @@
                                             <ul class="fa-ul">
                                                 <li><i class="fa-li fa fa-check"></i>C#</li>
                                                 <li><i class="fa-li fa fa-check"></i>.NET Framework</li>
+                                            </ul>
+										</div>
+									</div>
+								</div>
+								<div class="timeline-item">
+									<div class="timeline-item-date">осень&nbsp;2017</div>
+                                    <div class="timeline-item-trigger"><i class="fa fa-plus"></i></div>
+                                    <div class="timeline-item-content">
+										<div class="timeline-item-arrow"><i></i></div>
+										<h3>TCP клиент-сервер</h3>
+										<div class="timeline-item-content-spoiler" style="display: none;">
+											<p><a href="https://github.com/antonskvortsov10/TCP-Client-Server">Репозиторий с исходным кодом</a></p>
+											<h3>Цель: создание TCP клиента и сервера.</h3>
+											<p>Используемые языки и библиотеки:</p>
+                                            <ul class="fa-ul">
+                                                <li><i class="fa-li fa fa-check"></i>Python</li>
                                             </ul>
 										</div>
 									</div>
@@ -293,6 +309,22 @@
 										<div class="timeline-item-content-spoiler" style="display: none;">
 											<p><a href="https://github.com/antonskvortsov10/Intel-8080-Emulator">Репозиторий с исходным кодом</a></p>
 											<h3>Цель: разработка эмулятора процессора Intel 8080.</h3>
+											<p>Используемые языки и библиотеки:</p>
+                                            <ul class="fa-ul">
+                                                <li><i class="fa-li fa fa-check"></i>Python</li>
+                                            </ul>
+										</div>
+									</div>
+								</div>
+								<div class="timeline-item">
+									<div class="timeline-item-date">осень&nbsp;2014</div>
+                                    <div class="timeline-item-trigger"><i class="fa fa-plus"></i></div>
+                                    <div class="timeline-item-content">
+										<div class="timeline-item-arrow"><i></i></div>
+										<h3>Asteroids</h3>
+										<div class="timeline-item-content-spoiler" style="display: none;">
+											<p><a href="https://github.com/antonskvortsov10/Asteroids">Репозиторий с исходным кодом</a></p>
+											<h3>Цель: написать аналог игры Asteroids.</h3>
 											<p>Используемые языки и библиотеки:</p>
                                             <ul class="fa-ul">
                                                 <li><i class="fa-li fa fa-check"></i>Python</li>
