--- a/index.html
+++ b/index.html
@@ -183,14 +183,13 @@
                                     <div class="timeline-item-trigger"><i class="fa fa-plus"></i></div>
                                     <div class="timeline-item-content">
 										<div class="timeline-item-arrow"><i></i></div>
-										<h3>TCP/UDP клиент-сервер</h3>
+										<h3>FTP клиент-сервер</h3>
 										<div class="timeline-item-content-spoiler" style="display: none;">
-											<p><a href="https://github.com/antonskvortsov10/Client-and-Server">Репозиторий с исходным кодом</a></p>
-											<h3>Цель: создание сокетных клиентов и серверов (с использованием TCP и UDP).</h3>
+											<p><a href="https://github.com/antonskvortsov10/FTP-Client-Server">Репозиторий с исходным кодом</a></p>
+											<h3>Цель: создание FTP клиента и сервера.</h3>
 											<p>Используемые языки и библиотеки:</p>
                                             <ul class="fa-ul">
-                                                <li><i class="fa-li fa fa-check"></i>C#</li>
-                                                <li><i class="fa-li fa fa-check"></i>.NET Framework</li>
+                                                <li><i class="fa-li fa fa-check"></i>Python</li>
                                             </ul>
 										</div>
 									</div>
@@ -200,13 +199,14 @@
                                     <div class="timeline-item-trigger"><i class="fa fa-plus"></i></div>
                                     <div class="timeline-item-content">
 										<div class="timeline-item-arrow"><i></i></div>
-										<h3>TCP клиент-сервер</h3>
+										<h3>TCP/UDP клиент-сервер</h3>
 										<div class="timeline-item-content-spoiler" style="display: none;">
-											<p><a href="https://github.com/antonskvortsov10/TCP-Client-Server">Репозиторий с исходным кодом</a></p>
-											<h3>Цель: создание TCP клиента и сервера.</h3>
+											<p><a href="https://github.com/antonskvortsov10/Client-and-Server">Репозиторий с исходным кодом</a></p>
+											<h3>Цель: создание сокетных клиентов и серверов (с использованием TCP и UDP).</h3>
 											<p>Используемые языки и библиотеки:</p>
                                             <ul class="fa-ul">
-                                                <li><i class="fa-li fa fa-check"></i>Python</li>
+                                                <li><i class="fa-li fa fa-check"></i>C#</li>
+                                                <li><i class="fa-li fa fa-check"></i>.NET Framework</li>
                                             </ul>
 										</div>
 									</div>
