--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<div class="main wrapper clearfix">
 			<aside>
 				<div class="sidebar-header">
-					<h2>Антон Скворцов <span>Программист</span><span>Web разработчик</span></h2>
+					<h2>Антон Скворцов <span>C#/.NET разработчик</span><span>Web разработчик</span></h2>
 				</div>
 				<nav>
 					<ul>
@@ -40,7 +40,7 @@
 					<img src="img/ProfilePhoto.jpg" alt="" class="img-circle">
 					<h1>Антон Скворцов</h1>
 					<hr>
-					<h3>Программист, Backend разработчик.<br> Живу в Москве. Занимаюсь разработкой программного обеспечения, backend разработкой. Владею английским языком на достаточно высоком уровне. Люблю осваивать новые технологии и подходы в разработке.</h3>
+					<h3>Программист, Web разработчик.<br> Живу в Москве. Занимаюсь разработкой программного обеспечения, backend разработкой. Владею английским языком на достаточно высоком уровне. Люблю осваивать новые технологии и подходы в разработке.</h3>
 					<hr>
 				</header>
 				<section id="skills">
