--- a/index.html
+++ b/index.html
@@ -47,13 +47,13 @@
 					<div class="papers">
 						<div class="section-content">
 							<h2>Профессиональные навыки</h2>
-							<p>Специализируюсь в области разработки программного обеспечения, backend разработки на C#/.NET (WinForms, ASP.NET MVC/WebAPI, ASP.NET Core MVC/WebAPI) и Python/Django.</p>
-							<p>В разное время писал на PHP, C++/Qt, C, MATLAB.</p>
+							<p>Специализируюсь в области разработки программного обеспечения, backend разработки на C#/.NET (WinForms, WPF, ASP.NET MVC/WebAPI, ASP.NET Core MVC/WebAPI).</p>
+							<p>В разное время писал на Python, PHP, C++/Qt, C, MATLAB.</p>
 							<p>Хорошо разбираюсь в парадигме ООП, паттернах проектирования, алгоритмах и структурах данных. Умею работать с многопоточностью и асинхронным программированием. Также умею работать с Git, знаю основы работы с Docker.</p>
 							<p>Владею основами frontend разработки (HTML, CSS, JavaScript, JQuery, Bootstrap). Уважаю хорошие UI/UX-решения.</p>
 							<p>Составляю SQL-запросы различного уровня сложности, умею проектировать архитектуру БД.</p>
-							<p>Работаю со следующими СУБД: MS SQL Server, PostgreSQL, SQLite и MySQL.</p>
-							<p>В качестве сред разработки использую MS Visual Studio и PyCharm. Люблю использовать редактор Visual Studio Code. Также использую Postman и Swagger для работы с API и документирования API соответственно.</p>
+							<p>Работаю со следующими СУБД: MS SQL Server, PostgreSQL и MySQL.</p>
+							<p>В качестве среды разработки использую MS Visual Studio. Люблю использовать редактор Visual Studio Code. Также использую Postman и Swagger для работы с API и документирования API соответственно.</p>
 							<p>Выпускник МГУ им. М.В. Ломоносова (механико-математический факультет). Имею степень магистра в области математики и компьютерных наук (специализация: геометрия и топология). Также имею степень бакалавра по профильному направлению подготовки (направление: фундаментальная информатика и информационные технологии, профиль: инженерия программного обеспечения). Программированием начал заниматься ещё учась в средней школе.</p>
 							<p>Английским языком владею на достаточно высоком уровне. Люблю осваивать новые технологии и подходы в разработке.</p>
 							<p>С некоторыми моими проектами Вы можете ознакомиться ниже.</p>
