--- a/index.html
+++ b/index.html
@@ -127,6 +127,23 @@
                                     <div class="timeline-item-trigger"><i class="fa fa-plus"></i></div>
                                     <div class="timeline-item-content">
 										<div class="timeline-item-arrow"><i></i></div>
+										<h3>Task list</h3>
+										<div class="timeline-item-content-spoiler" style="display: none;">
+											<p><a href="https://github.com/antonskvortsov10/WpfToDoApp">Репозиторий с исходным кодом</a></p>
+											<h3>Цель: создание программы для ведения списка дел.</h3>
+											<p>Используемые языки и библиотеки:</p>
+                                            <ul class="fa-ul">
+												<li><i class="fa-li fa fa-check"></i>C#</li>
+                                                <li><i class="fa-li fa fa-check"></i>.NET Framework</li>
+                                                <li><i class="fa-li fa fa-check"></i>WPF</li>
+                                            </ul>
+										</div>
+									</div>
+								</div>
+								<div class="timeline-item">
+                                    <div class="timeline-item-trigger"><i class="fa fa-plus"></i></div>
+                                    <div class="timeline-item-content">
+										<div class="timeline-item-arrow"><i></i></div>
 										<h3>Dashboard</h3>
 										<div class="timeline-item-content-spoiler" style="display: none;">
 											<p><a href="https://github.com/antonskvortsov10/Dashboard">Репозиторий с исходным кодом</a></p>
@@ -162,8 +179,7 @@
 										<h3>Приложение с компьютерной графикой</h3>
 										<div class="timeline-item-content-spoiler" style="display: none;">
 											<p><a href="https://github.com/antonskvortsov10/Graphics-app">Репозиторий с исходным кодом</a></p>
-											<h3>Цель: создание приложения, реализующего поставленную задачу по компьютерной графике
-												(выполнение лабораторной работы на заказ).</h3>
+											<h3>Цель: создание приложения, реализующего поставленную задачу по компьютерной графике.</h3>
 											<p>Используемые языки и библиотеки:</p>
                                             <ul class="fa-ul">
 												<li><i class="fa-li fa fa-check"></i>C#</li>
