--- a/index.html
+++ b/index.html
@@ -127,6 +127,24 @@
                                     <div class="timeline-item-trigger"><i class="fa fa-plus"></i></div>
                                     <div class="timeline-item-content">
 										<div class="timeline-item-arrow"><i></i></div>
+										<h3>Chat</h3>
+										<div class="timeline-item-content-spoiler" style="display: none;">
+											<p><a href="https://github.com/antonskvortsov10/Chat">Репозиторий с исходным кодом</a></p>
+											<h3>Цель: создание многопользовательского чата.</h3>
+											<p>Используемые языки и библиотеки:</p>
+                                            <ul class="fa-ul">
+												<li><i class="fa-li fa fa-check"></i>C#</li>
+                                                <li><i class="fa-li fa fa-check"></i>.NET Framework</li>
+                                                <li><i class="fa-li fa fa-check"></i>WCF</li>
+                                                <li><i class="fa-li fa fa-check"></i>WPF</li>
+                                            </ul>
+										</div>
+									</div>
+								</div>
+								<div class="timeline-item">
+                                    <div class="timeline-item-trigger"><i class="fa fa-plus"></i></div>
+                                    <div class="timeline-item-content">
+										<div class="timeline-item-arrow"><i></i></div>
 										<h3>Task list</h3>
 										<div class="timeline-item-content-spoiler" style="display: none;">
 											<p><a href="https://github.com/antonskvortsov10/WpfToDoApp">Репозиторий с исходным кодом</a></p>
