--- a/index.html
+++ b/index.html
@@ -47,14 +47,14 @@
 					<div class="papers">
 						<div class="section-content">
 							<h2>Профессиональные навыки</h2>
-							<p>Специализируюсь в области разработки программного обеспечения, backend разработки на C#/.NET (WinForms, WPF, ASP.NET MVC/WebAPI, ASP.NET Core MVC/WebAPI).</p>
-							<p>В разное время писал на Python, PHP, C++/Qt, C, MATLAB.</p>
-							<p>Хорошо разбираюсь в парадигме ООП, паттернах проектирования, алгоритмах и структурах данных. Умею работать с многопоточностью и асинхронным программированием. Также умею работать с Git, знаю основы работы с Docker.</p>
+							<p>Специализируюсь в области разработки программного обеспечения, backend разработки на C#/.NET (WinForms, ASP.NET MVC/WebAPI, ASP.NET Core MVC/WebAPI, Entity Framework, WPF, WCF).</p>
+							<p>В разное время писал на Python, PHP, C++, C, MATLAB.</p>
+							<p>Хорошо разбираюсь в парадигме ООП, паттернах проектирования, алгоритмах и структурах данных. Умею работать с многопоточностью и асинхронным программированием. Также умею работать с Git.</p>
 							<p>Владею основами frontend разработки (HTML, CSS, JavaScript, JQuery, Bootstrap). Уважаю хорошие UI/UX-решения.</p>
 							<p>Составляю SQL-запросы различного уровня сложности, умею проектировать архитектуру БД.</p>
 							<p>Работаю со следующими СУБД: MS SQL Server, PostgreSQL и MySQL.</p>
 							<p>В качестве среды разработки использую MS Visual Studio. Люблю использовать редактор Visual Studio Code. Также использую Postman и Swagger для работы с API и документирования API соответственно.</p>
-							<p>Выпускник МГУ им. М.В. Ломоносова (механико-математический факультет). Имею степень магистра в области математики и компьютерных наук (специализация: геометрия и топология). Также имею степень бакалавра по профильному направлению подготовки (направление: фундаментальная информатика и информационные технологии, профиль: инженерия программного обеспечения). Программированием начал заниматься ещё учась в средней школе.</p>
+							<p>Выпускник МГУ им. М.В. Ломоносова (механико-математический факультет), имею степень магистра в области фундаментальной математики (специализация: геометрия и топология). Также имею степень бакалавра по направлению фундаментальная информатика и информационные технологии (профиль: инженерия программного обеспечения). Программированием начал заниматься ещё учась в средней школе.</p>
 							<p>Английским языком владею на достаточно высоком уровне. Люблю осваивать новые технологии и подходы в разработке.</p>
 							<p>С некоторыми моими проектами Вы можете ознакомиться ниже.</p>
 						</div>
@@ -119,6 +119,7 @@
 												<li><i class="fa-li fa fa-check"></i>Ajax</li>
 												<li><i class="fa-li fa fa-check"></i>JQuery</li>
 												<li><i class="fa-li fa fa-check"></i>Bootstrap</li>
+												<li><i class="fa-li fa fa-check"></i>Postman</li>
 											</ul>
 										</div>
 									</div>
@@ -300,8 +301,8 @@
 											<h3>Цель: разработка игры в жанре adventure с помощью фреймворка Qt.</h3>
 											<p>Используемые языки и библиотеки:</p>
                                             <ul class="fa-ul">
-                                                <li><i class="fa-li fa fa-check"></i>Qt</li>
-                                                <li><i class="fa-li fa fa-check"></i>C++</li>
+												<li><i class="fa-li fa fa-check"></i>C++</li>
+												<li><i class="fa-li fa fa-check"></i>Qt</li>
                                             </ul>
 										</div>
 									</div>
