--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 										<div class="timeline-item-content-spoiler" style="display: none;">
 											<p><a href="https://github.com/antonskvortsov10/Chat">Репозиторий с исходным кодом</a></p>
 											<h3>Цель: создание многопользовательского чата.</h3>
-											<p>Используемые языки и библиотеки:</p>
+											<p>Используемые языки, фреймворки и технологии</p>
                                             <ul class="fa-ul">
 												<li><i class="fa-li fa fa-check"></i>C#</li>
                                                 <li><i class="fa-li fa fa-check"></i>.NET Framework</li>
@@ -150,7 +150,7 @@
 										<div class="timeline-item-content-spoiler" style="display: none;">
 											<p><a href="https://github.com/antonskvortsov10/WpfToDoApp">Репозиторий с исходным кодом</a></p>
 											<h3>Цель: создание программы для ведения списка дел.</h3>
-											<p>Используемые языки и библиотеки:</p>
+											<p>Используемые языки, фреймворки и технологии</p>
                                             <ul class="fa-ul">
 												<li><i class="fa-li fa fa-check"></i>C#</li>
                                                 <li><i class="fa-li fa fa-check"></i>.NET Framework</li>
@@ -167,7 +167,7 @@
 										<div class="timeline-item-content-spoiler" style="display: none;">
 											<p><a href="https://github.com/antonskvortsov10/Dashboard">Репозиторий с исходным кодом</a></p>
 											<h3>Цель: разработка дизайна и реализация панели управления.</h3>
-											<p>Используемые языки и библиотеки:</p>
+											<p>Используемые языки, фреймворки и технологии</p>
                                             <ul class="fa-ul">
 												<li><i class="fa-li fa fa-check"></i>C#</li>
                                                 <li><i class="fa-li fa fa-check"></i>.NET Framework</li>
@@ -184,7 +184,7 @@
 										<div class="timeline-item-content-spoiler" style="display: none;">
 											<p><a href="https://github.com/antonskvortsov10/CurrencyParser">Репозиторий с исходным кодом</a></p>
 											<h3>Цель: создание кроссплатформенного приложения для парсинга курсов валют (по курсу ЦБ).</h3>
-											<p>Используемые языки и библиотеки:</p>
+											<p>Используемые языки, фреймворки и технологии</p>
                                             <ul class="fa-ul">
                                                 <li><i class="fa-li fa fa-check"></i>Java</li>
                                             </ul>
@@ -199,7 +199,7 @@
 										<div class="timeline-item-content-spoiler" style="display: none;">
 											<p><a href="https://github.com/antonskvortsov10/Graphics-app">Репозиторий с исходным кодом</a></p>
 											<h3>Цель: создание приложения, реализующего поставленную задачу по компьютерной графике.</h3>
-											<p>Используемые языки и библиотеки:</p>
+											<p>Используемые языки, фреймворки и технологии</p>
                                             <ul class="fa-ul">
 												<li><i class="fa-li fa fa-check"></i>C#</li>
                                                 <li><i class="fa-li fa fa-check"></i>.NET Framework</li>
@@ -216,7 +216,7 @@
 										<div class="timeline-item-content-spoiler" style="display: none;">
 											<p><a href="https://github.com/antonskvortsov10/FTP-Client-Server">Репозиторий с исходным кодом</a></p>
 											<h3>Цель: создание FTP клиента и сервера.</h3>
-											<p>Используемые языки и библиотеки:</p>
+											<p>Используемые языки, фреймворки и технологии</p>
                                             <ul class="fa-ul">
                                                 <li><i class="fa-li fa fa-check"></i>Python</li>
                                             </ul>
@@ -231,7 +231,7 @@
 										<div class="timeline-item-content-spoiler" style="display: none;">
 											<p><a href="https://github.com/antonskvortsov10/Client-and-Server">Репозиторий с исходным кодом</a></p>
 											<h3>Цель: создание сокетных клиентов и серверов (с использованием TCP и UDP).</h3>
-											<p>Используемые языки и библиотеки:</p>
+											<p>Используемые языки, фреймворки и технологии</p>
                                             <ul class="fa-ul">
                                                 <li><i class="fa-li fa fa-check"></i>C#</li>
                                                 <li><i class="fa-li fa fa-check"></i>.NET Framework</li>
@@ -247,7 +247,7 @@
 										<div class="timeline-item-content-spoiler" style="display: none;">
 											<p><a href="https://github.com/antonskvortsov10/City-Database">Репозиторий с исходным кодом</a></p>
 											<h3>Цель: проектирование базы данных городов и создание консольного интерфейса для взаимодействия с ней.</h3>
-											<p>Используемые языки и библиотеки:</p>
+											<p>Используемые языки, фреймворки и технологии</p>
                                             <ul class="fa-ul">
                                                 <li><i class="fa-li fa fa-check"></i>PostgreSQL</li>
 												<li><i class="fa-li fa fa-check"></i>ECPG</li>
@@ -265,7 +265,7 @@
 										<div class="timeline-item-content-spoiler" style="display: none;">
 											<p><a href="https://github.com/antonskvortsov10/K-means">Репозиторий с исходным кодом</a></p>
 											<h3>Цель: разработка десктопного приложения с реализацией метода кластеризации k-means для обработки изображений.</h3>
-											<p>Используемые языки и библиотеки:</p>
+											<p>Используемые языки, фреймворки и технологии</p>
                                             <ul class="fa-ul">
                                                 <li><i class="fa-li fa fa-check"></i>C#</li>
                                                 <li><i class="fa-li fa fa-check"></i>.NET Framework</li>
@@ -282,7 +282,7 @@
 										<div class="timeline-item-content-spoiler" style="display: none;">
 											<p><a href="https://github.com/antonskvortsov10/Image-processing">Репозиторий с исходным кодом</a></p>
 											<h3>Цель: разработка десктопного приложения для обработки изображений.</h3>
-											<p>Используемые языки и библиотеки:</p>
+											<p>Используемые языки, фреймворки и технологии</p>
                                             <ul class="fa-ul">
                                                 <li><i class="fa-li fa fa-check"></i>C#</li>
                                                 <li><i class="fa-li fa fa-check"></i>.NET Framework</li>
@@ -299,7 +299,7 @@
 										<div class="timeline-item-content-spoiler" style="display: none;">
 											<p><a href="https://github.com/antonskvortsov10/Adventure-game">Репозиторий с исходным кодом</a></p>
 											<h3>Цель: разработка игры в жанре adventure с помощью фреймворка Qt.</h3>
-											<p>Используемые языки и библиотеки:</p>
+											<p>Используемые языки, фреймворки и технологии</p>
                                             <ul class="fa-ul">
 												<li><i class="fa-li fa fa-check"></i>C++</li>
 												<li><i class="fa-li fa fa-check"></i>Qt</li>
