--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<meta name="description" content="Страница разработчика">
-	<meta name="keywords" content="Антон Скворцов, А.И. Скворцов, Скворцов Антон Игоревич, C# разработчик, C#/.NET разработчик, ASP.NET разработчик, Backend разработчик, Web разработчик, Anton Skvortsov, A. Skvortsov, C# Developer, C#/.NET Developer, ASP.NET Developer, Backend Developer, Web Developer, Software Developer, Software Engineer">
+	<meta name="keywords" content="Антон Скворцов, А.И. Скворцов, Скворцов Антон Игоревич, Frontend разработчик, Web разработчик, Anton Skvortsov, A. Skvortsov, Frontend Developer, Web Developer, Software Developer, Software Engineer">
     <title>Антон Скворцов - Страница разработчика</title>
 	<link href='https://fonts.googleapis.com/css?family=Cuprum:700|PT+Sans:400,700&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
@@ -17,7 +17,7 @@
 		<div class="main wrapper clearfix">
 			<aside>
 				<div class="sidebar-header">
-					<h2>Антон Скворцов <span>C#/.NET разработчик</span><span>Web разработчик</span></h2>
+					<h2>Антон Скворцов <span>Программист</span><span>Web разработчик</span></h2>
 				</div>
 				<nav>
 					<ul>
@@ -40,20 +40,19 @@
 					<img src="img/ProfilePhoto.jpg" alt="" class="img-circle">
 					<h1>Антон Скворцов</h1>
 					<hr>
-					<h3>Программист, Web разработчик.<br> Живу в Москве. Занимаюсь разработкой программного обеспечения, backend разработкой. Владею английским языком на достаточно высоком уровне. Люблю осваивать новые технологии и подходы в разработке.</h3>
+					<h3>Программист, Web разработчик.<br> Живу в Москве. Занимаюсь разработкой программного обеспечения, web разработкой. Владею английским языком на достаточно высоком уровне. Люблю осваивать новые технологии и подходы в разработке.</h3>
 					<hr>
 				</header>
 				<section id="skills">
 					<div class="papers">
 						<div class="section-content">
 							<h2>Профессиональные навыки</h2>
-							<p>Специализируюсь в области разработки программного обеспечения, backend разработки на C#/.NET (WinForms, ASP.NET MVC/WebAPI, ASP.NET Core MVC/WebAPI, Entity Framework, WPF, WCF).</p>
+							<p>Владею навыками frontend разработки (JavaScript, React, Redux, JQuery, HTML, CSS). Уважаю хорошие UI/UX-решения.</p>
+							<p>Также специализируюсь в области разработки программного обеспечения на C#/.NET.</p>
 							<p>В разное время писал на Python, C++, C, MATLAB.</p>
-							<p>Хорошо разбираюсь в парадигме ООП, паттернах проектирования, алгоритмах и структурах данных. Умею работать с многопоточностью и асинхронным программированием. Также умею работать с Git.</p>
-							<p>Владею основами frontend разработки (HTML, CSS, JavaScript, JQuery, Bootstrap). Уважаю хорошие UI/UX-решения.</p>
-							<p>Составляю SQL-запросы различного уровня сложности, умею проектировать архитектуру БД.</p>
-							<p>Работаю со следующими СУБД: MS SQL Server, PostgreSQL и MySQL.</p>
-							<p>В качестве среды разработки использую MS Visual Studio. Люблю использовать редактор Visual Studio Code. Также использую Postman и Swagger для работы с API и документирования API соответственно.</p>
+							<p>Хорошо разбираюсь в парадигме ООП, паттернах проектирования, алгоритмах и структурах данных. Умею работать с многопоточностью и асинхронным программированием.</p>
+							<p>В качестве среды разработки использую MS Visual Studio и WebStorm. Люблю использовать редактор Visual Studio Code. Также использую Postman и Swagger для работы с API и документирования API соответственно. Умею работать с Git.</p>
+							<p>Из СУБД работаю в основном с MS SQL Server. Также имеется опыт работы с PostgreSQL и SQLite.</p>
 							<p>Выпускник МГУ им. М.В. Ломоносова (механико-математический факультет), имею степень магистра в области фундаментальной математики (специализация: геометрия и топология). Также имею степень бакалавра по направлению фундаментальная информатика и информационные технологии (профиль: инженерия программного обеспечения). Программированием начал заниматься ещё учась в средней школе.</p>
 							<p>Английским языком владею на достаточно высоком уровне. Люблю осваивать новые технологии и подходы в разработке.</p>
 							<p>С некоторыми моими проектами Вы можете ознакомиться ниже.</p>
