--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
 					<div class="papers">
 						<div class="section-content">
 							<h2>Профессиональные навыки</h2>
+							<p>Специализируюсь в области web разработки и разработки программного обеспечения на C#/.NET (WinForms, ASP.NET).</p>
 							<p>Владею навыками frontend разработки (JavaScript, React, Redux, JQuery, HTML, CSS). Уважаю хорошие UI/UX-решения.</p>
-							<p>Также специализируюсь в области разработки программного обеспечения на C#/.NET.</p>
 							<p>В разное время писал на Python, C++, C, MATLAB.</p>
 							<p>Хорошо разбираюсь в парадигме ООП, паттернах проектирования, алгоритмах и структурах данных. Умею работать с многопоточностью и асинхронным программированием.</p>
 							<p>В качестве среды разработки использую MS Visual Studio и WebStorm. Люблю использовать редактор Visual Studio Code. Также использую Postman и Swagger для работы с API и документирования API соответственно. Умею работать с Git.</p>
@@ -76,8 +76,66 @@
                                     <div class="timeline-item-trigger"><i class="fa fa-plus"></i></div>
                                     <div class="timeline-item-content">
 										<div class="timeline-item-arrow"><i></i></div>
+										<h3>Resort search app</h3>
+										<div class="timeline-item-content-spoiler" style="display: none;">
+											<p><a href="https://github.com/antonskvortsov10/resort-search-app">Репозиторий с исходным кодом</a></p>
+											<h3>Цель: разработка frontend-части веб-приложения (SPA) по поиску курортного жилья.</h3>
+											<p>Используемые языки, фреймворки и технологии:</p>
+                                            <ul class="fa-ul">
+                                                <li><i class="fa-li fa fa-check"></i>JavaScript</li>
+												<li><i class="fa-li fa fa-check"></i>React</li>
+											</ul>
+										</div>
+									</div>
+								</div>
+								<div class="timeline-item">
+                                    <div class="timeline-item-trigger"><i class="fa fa-plus"></i></div>
+                                    <div class="timeline-item-content">
+										<div class="timeline-item-arrow"><i></i></div>
+										<h3>DeviceShop</h3>
+										<div class="timeline-item-content-spoiler" style="display: none;">
+											<iframe width="560" height="315" src="https://www.youtube.com/embed/23FZogLEi4M" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+											<p><a href="https://github.com/antonskvortsov10/online-electronics-store">Репозиторий с исходным кодом</a></p>
+											<h3>Цель: разработка интернет-магазина по продаже цифровой техники с использованием стека PERN.</h3>
+											<p>Используемые языки, фреймворки и технологии:</p>
+                                            <ul class="fa-ul">
+                                                <li><i class="fa-li fa fa-check"></i>JavaScript</li>
+												<li><i class="fa-li fa fa-check"></i>React</li>
+												<li><i class="fa-li fa fa-check"></i>MobX</li>
+												<li><i class="fa-li fa fa-check"></i>Node.js</li>
+												<li><i class="fa-li fa fa-check"></i>Express</li>
+												<li><i class="fa-li fa fa-check"></i>Sequelize</li>
+												<li><i class="fa-li fa fa-check"></i>PostgreSQL</li>
+											</ul>
+										</div>
+									</div>
+								</div>
+								<div class="timeline-item">
+                                    <div class="timeline-item-trigger"><i class="fa fa-plus"></i></div>
+                                    <div class="timeline-item-content">
+										<div class="timeline-item-arrow"><i></i></div>
+										<h3>ReStore</h3>
+										<div class="timeline-item-content-spoiler" style="display: none;">
+											<iframe width="560" height="315" src="https://www.youtube.com/embed/BMG94lw9SiM" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+											<p><a href="https://github.com/antonskvortsov10/re-store">Репозиторий с исходным кодом</a></p>
+											<h3>Цель: разработка frontend-части веб-приложения (SPA), представляющего собой интернет-магазин электронной литературы по программированию.</h3>
+											<p>Используемые языки, фреймворки и технологии:</p>
+                                            <ul class="fa-ul">
+                                                <li><i class="fa-li fa fa-check"></i>JavaScript</li>
+												<li><i class="fa-li fa fa-check"></i>React</li>
+												<li><i class="fa-li fa fa-check"></i>Redux</li>
+											</ul>
+										</div>
+									</div>
+								</div>
+								<div class="timeline-item">
+                                    <div class="timeline-item-trigger"><i class="fa fa-plus"></i></div>
+                                    <div class="timeline-item-content">
+										<div class="timeline-item-arrow"><i></i></div>
 										<h3>Parky</h3>
 										<div class="timeline-item-content-spoiler" style="display: none;">
+											<iframe width="560" height="315" src="https://www.youtube.com/embed/Ycli8AjyoBI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+											<iframe width="560" height="315" src="https://www.youtube.com/embed/Oz9eHzDtCHg" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 											<p><a href="https://github.com/antonskvortsov10/Parky">Репозиторий с исходным кодом</a></p>
 											<h3>Цель: создание веб-приложения о национальных парках.</h3>
 											<p>Используемые языки, фреймворки и технологии:</p>
@@ -89,8 +147,9 @@
 												<li><i class="fa-li fa fa-check"></i>Entity framework Core</li>
 												<li><i class="fa-li fa fa-check"></i>LINQ</li>
 												<li><i class="fa-li fa fa-check"></i>MS SQL</li>
-												<li><i class="fa-li fa fa-check"></i>Ajax</li>
+												<li><i class="fa-li fa fa-check"></i>JavaScript</li>
 												<li><i class="fa-li fa fa-check"></i>JQuery</li>
+												<li><i class="fa-li fa fa-check"></i>Ajax</li>
 												<li><i class="fa-li fa fa-check"></i>Bootstrap</li>
 												<li><i class="fa-li fa fa-check"></i>Postman</li>
 												<li><i class="fa-li fa fa-check"></i>Swagger</li>
@@ -115,8 +174,9 @@
 												<li><i class="fa-li fa fa-check"></i>Entity framework</li>
 												<li><i class="fa-li fa fa-check"></i>LINQ</li>
 												<li><i class="fa-li fa fa-check"></i>MS SQL</li>
-												<li><i class="fa-li fa fa-check"></i>Ajax</li>
+												<li><i class="fa-li fa fa-check"></i>JavaScript</li>
 												<li><i class="fa-li fa fa-check"></i>JQuery</li>
+												<li><i class="fa-li fa fa-check"></i>Ajax</li>
 												<li><i class="fa-li fa fa-check"></i>Bootstrap</li>
 												<li><i class="fa-li fa fa-check"></i>Postman</li>
 											</ul>
@@ -343,6 +403,7 @@
 										<div class="timeline-item-arrow"><i></i></div>
 										<h3>Asteroids</h3>
 										<div class="timeline-item-content-spoiler" style="display: none;">
+											<iframe width="560" height="315" src="https://www.youtube.com/embed/jeqE2kTEpD4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 											<p><a href="https://github.com/antonskvortsov10/Asteroids">Репозиторий с исходным кодом</a></p>
 											<h3>Цель: написать аналог игры Asteroids.</h3>
 											<p>Используемые языки и библиотеки:</p>
