--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 						<div class="section-content">
 							<h2>Профессиональные навыки</h2>
 							<p>Специализируюсь в области web разработки и разработки программного обеспечения на C#/.NET (WinForms, ASP.NET).</p>
-							<p>Владею навыками frontend разработки (JavaScript, React, Redux, JQuery, HTML, CSS). Уважаю хорошие UI/UX-решения.</p>
+							<p>Владею навыками frontend разработки (JavaScript, React, Redux, MobX, JQuery, HTML, CSS). Уважаю хорошие UI/UX-решения.</p>
 							<p>В разное время писал на Python, C++, C, MATLAB.</p>
 							<p>Хорошо разбираюсь в парадигме ООП, паттернах проектирования, алгоритмах и структурах данных. Умею работать с многопоточностью и асинхронным программированием.</p>
 							<p>В качестве среды разработки использую MS Visual Studio и WebStorm. Люблю использовать редактор Visual Studio Code. Также использую Postman и Swagger для работы с API и документирования API соответственно. Умею работать с Git.</p>
@@ -78,6 +78,7 @@
 										<div class="timeline-item-arrow"><i></i></div>
 										<h3>Resort search app</h3>
 										<div class="timeline-item-content-spoiler" style="display: none;">
+											<iframe width="560" height="315" src="https://www.youtube.com/embed/-ZrHqLKS-Rk" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 											<p><a href="https://github.com/antonskvortsov10/resort-search-app">Репозиторий с исходным кодом</a></p>
 											<h3>Цель: разработка frontend-части веб-приложения (SPA) по поиску курортного жилья.</h3>
 											<p>Используемые языки, фреймворки и технологии:</p>
