--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<div class="main wrapper clearfix">
 			<aside>
 				<div class="sidebar-header">
-					<h2>Антон Скворцов <span>Программист</span><span>Web разработчик</span></h2>
+					<h2>Антон Скворцов <span>Web разработчик</span><span>Программист</span></h2>
 				</div>
 				<nav>
 					<ul>
@@ -40,15 +40,15 @@
 					<img src="img/ProfilePhoto.jpg" alt="" class="img-circle">
 					<h1>Антон Скворцов</h1>
 					<hr>
-					<h3>Программист, Web разработчик.<br> Живу в Москве. Занимаюсь разработкой программного обеспечения, web разработкой. Владею английским языком на достаточно высоком уровне. Люблю осваивать новые технологии и подходы в разработке.</h3>
+					<h3>Web разработчик, Программист.<br> Живу в Москве. Занимаюсь web разработкой и разработкой программного обеспечения. Владею английским языком на достаточно высоком уровне. Люблю осваивать новые технологии и подходы в разработке.</h3>
 					<hr>
 				</header>
 				<section id="skills">
 					<div class="papers">
 						<div class="section-content">
 							<h2>Профессиональные навыки</h2>
-							<p>Специализируюсь в области web разработки и разработки программного обеспечения на C#/.NET (WinForms, ASP.NET).</p>
-							<p>Владею навыками frontend разработки (JavaScript, React, Redux, MobX, JQuery, HTML, CSS). Уважаю хорошие UI/UX-решения.</p>
+							<p>Специализируюсь в области web разработки. Владею навыками frontend разработки (JavaScript, React, Redux, MobX, JQuery, HTML, CSS, Bootstrap, SCSS/SASS, Webpack, Babel). Уважаю хорошие UI/UX-решения.</p>
+							<p>Помимо этого занимаюсь разработкой программного обеспечения на C#/.NET (WinForms, ASP.NET).</p>
 							<p>В разное время писал на Python, C++, C, MATLAB.</p>
 							<p>Хорошо разбираюсь в парадигме ООП, паттернах проектирования, алгоритмах и структурах данных. Умею работать с многопоточностью и асинхронным программированием.</p>
 							<p>В качестве среды разработки использую MS Visual Studio и WebStorm. Люблю использовать редактор Visual Studio Code. Также использую Postman и Swagger для работы с API и документирования API соответственно. Умею работать с Git.</p>
