--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 					<div class="papers">
 						<div class="section-content">
 							<h2>Профессиональные навыки</h2>
-							<p>Специализируюсь в области web разработки. Владею навыками frontend разработки (JavaScript, React, Redux, MobX, JQuery, HTML, CSS, Bootstrap, SCSS/SASS, Webpack, Babel). Уважаю хорошие UI/UX-решения.</p>
+							<p>Специализируюсь в области web разработки. Владею навыками frontend разработки (JavaScript, React, Redux, MobX, JQuery, HTML, CSS, Bootstrap, Material-UI, SCSS/SASS, Webpack, Babel). Уважаю хорошие UI/UX-решения.</p>
 							<p>Помимо этого занимаюсь разработкой программного обеспечения на C#/.NET (WinForms, ASP.NET).</p>
 							<p>В разное время писал на Python, C++, C, MATLAB.</p>
 							<p>Хорошо разбираюсь в парадигме ООП, паттернах проектирования, алгоритмах и структурах данных. Умею работать с многопоточностью и асинхронным программированием.</p>
