--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
                                             <ul class="fa-ul">
                                                 <li><i class="fa-li fa fa-check"></i>JavaScript</li>
 												<li><i class="fa-li fa fa-check"></i>React</li>
+												<li><i class="fa-li fa fa-check"></i>Styled components</li>
 											</ul>
 										</div>
 									</div>
