--- a/index.html
+++ b/index.html
@@ -189,6 +189,22 @@
                                     <div class="timeline-item-trigger"><i class="fa fa-plus"></i></div>
                                     <div class="timeline-item-content">
 										<div class="timeline-item-arrow"><i></i></div>
+										<h3>Glass-like site</h3>
+										<div class="timeline-item-content-spoiler" style="display: none;">
+											<p><a href="web/glass-like-site/index.html">Ссылка</a></p>
+											<h3>Цель: разработка дизайна и вёрстка прототипа страницы веб-сайта.</h3>
+											<p>Используемые языки, фреймворки и технологии:</p>
+                                            <ul class="fa-ul">
+                                                <li><i class="fa-li fa fa-check"></i>HTML</li>
+                                                <li><i class="fa-li fa fa-check"></i>CSS</li>
+											</ul>
+										</div>
+									</div>
+								</div>
+								<div class="timeline-item">
+                                    <div class="timeline-item-trigger"><i class="fa fa-plus"></i></div>
+                                    <div class="timeline-item-content">
+										<div class="timeline-item-arrow"><i></i></div>
 										<h3>Chat</h3>
 										<div class="timeline-item-content-spoiler" style="display: none;">
 											<p><a href="https://github.com/antonskvortsov10/Chat">Репозиторий с исходным кодом</a></p>
