--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
 							<h2>Профессиональные навыки</h2>
 							<p>Специализируюсь в области web разработки. Владею навыками frontend разработки (JavaScript, React, Redux, MobX, JQuery, HTML, CSS, Bootstrap, Material-UI, SCSS/SASS, Webpack, Babel). Уважаю хорошие UI/UX-решения.</p>
 							<p>Помимо этого занимаюсь разработкой программного обеспечения на C#/.NET (WinForms, ASP.NET).</p>
-							<p>В разное время писал на Python, C++, C, MATLAB.</p>
+							<p>В разное время писал на PHP, Python, C++, C, MATLAB.</p>
 							<p>Хорошо разбираюсь в парадигме ООП, паттернах проектирования, алгоритмах и структурах данных. Умею работать с многопоточностью и асинхронным программированием.</p>
 							<p>В качестве среды разработки использую MS Visual Studio и WebStorm. Люблю использовать редактор Visual Studio Code. Также использую Postman и Swagger для работы с API и документирования API соответственно. Умею работать с Git.</p>
-							<p>Из СУБД работаю в основном с MS SQL Server. Также имеется опыт работы с PostgreSQL и SQLite.</p>
+							<p>Из СУБД работаю в основном с MS SQL Server. Также имеется опыт работы с PostgreSQL и MySQL.</p>
 							<p>Выпускник МГУ им. М.В. Ломоносова (механико-математический факультет), имею степень магистра в области фундаментальной математики (специализация: геометрия и топология). Также имею степень бакалавра по направлению фундаментальная информатика и информационные технологии (профиль: инженерия программного обеспечения). Программированием начал заниматься ещё учась в средней школе.</p>
 							<p>Английским языком владею на достаточно высоком уровне. Люблю осваивать новые технологии и подходы в разработке.</p>
 							<p>С некоторыми моими проектами Вы можете ознакомиться ниже.</p>
