--- a/index.html
+++ b/index.html
@@ -134,6 +134,23 @@
                                     <div class="timeline-item-trigger"><i class="fa fa-plus"></i></div>
                                     <div class="timeline-item-content">
 										<div class="timeline-item-arrow"><i></i></div>
+										<h3>Test dashboard</h3>
+										<div class="timeline-item-content-spoiler" style="display: none;">
+											<p><a href="https://github.com/antonskvortsov10/test-dashboard">Репозиторий с исходным кодом</a></p>
+											<h3>Цель: создание панели управления для работы с результатами A/B-тестирования.</h3>
+											<p>Используемые языки, фреймворки и технологии</p>
+                                            <ul class="fa-ul">
+												<li><i class="fa-li fa fa-check"></i>React</li>
+												<li><i class="fa-li fa fa-check"></i>TypeScript</li>
+												<li><i class="fa-li fa fa-check"></i>Figma</li>
+                                            </ul>
+										</div>
+									</div>
+								</div>
+								<div class="timeline-item">
+                                    <div class="timeline-item-trigger"><i class="fa fa-plus"></i></div>
+                                    <div class="timeline-item-content">
+										<div class="timeline-item-arrow"><i></i></div>
 										<h3>Parky</h3>
 										<div class="timeline-item-content-spoiler" style="display: none;">
 											<iframe width="560" height="315" src="https://www.youtube.com/embed/Ycli8AjyoBI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
