--- a/index.html
+++ b/index.html
@@ -257,6 +257,23 @@
                                     <div class="timeline-item-trigger"><i class="fa fa-plus"></i></div>
                                     <div class="timeline-item-content">
 										<div class="timeline-item-arrow"><i></i></div>
+										<h3>Grocery Store</h3>
+										<div class="timeline-item-content-spoiler" style="display: none;">
+											<p><a href="https://github.com/antonskvortsov10/GroceryStore">Репозиторий с исходным кодом</a></p>
+											<h3>Цель: разработка бакалейного интернет-магазина.</h3>
+											<p>Используемые языки, фреймворки и технологии</p>
+                                            <ul class="fa-ul">
+												<li><i class="fa-li fa fa-check"></i>PHP</li>
+                                                <li><i class="fa-li fa fa-check"></i>YII2</li>
+                                                <li><i class="fa-li fa fa-check"></i>MySQL</li>
+                                            </ul>
+										</div>
+									</div>
+								</div>
+								<div class="timeline-item">
+                                    <div class="timeline-item-trigger"><i class="fa fa-plus"></i></div>
+                                    <div class="timeline-item-content">
+										<div class="timeline-item-arrow"><i></i></div>
 										<h3>Приложение для парсинга курсов валют</h3>
 										<div class="timeline-item-content-spoiler" style="display: none;">
 											<p><a href="https://github.com/antonskvortsov10/CurrencyParser">Репозиторий с исходным кодом</a></p>
