--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<meta name="description" content="Страница разработчика">
-	<meta name="keywords" content="Антон Скворцов, А.И. Скворцов, Скворцов Антон Игоревич, Frontend разработчик, Web разработчик, Anton Skvortsov, A. Skvortsov, Frontend Developer, Web Developer, Software Developer, Software Engineer">
+	<meta name="keywords" content="Антон Скворцов, А.И. Скворцов, Скворцов Антон Игоревич, C#/.NET разработчик, Web разработчик, Anton Skvortsov, A. Skvortsov, C#/.NET Developer, Web Developer, Software Developer, Software Engineer">
     <title>Антон Скворцов - Страница разработчика</title>
 	<link href='https://fonts.googleapis.com/css?family=Cuprum:700|PT+Sans:400,700&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
@@ -17,7 +17,7 @@
 		<div class="main wrapper clearfix">
 			<aside>
 				<div class="sidebar-header">
-					<h2>Антон Скворцов <span>Web разработчик</span><span>Программист</span></h2>
+					<h2>Антон Скворцов <span>C#/.NET разработчик</span><span>Web разработчик</span></h2>
 				</div>
 				<nav>
 					<ul>
@@ -40,15 +40,15 @@
 					<img src="img/ProfilePhoto.jpg" alt="" class="img-circle">
 					<h1>Антон Скворцов</h1>
 					<hr>
-					<h3>Web разработчик, Программист.<br> Живу в Москве. Занимаюсь web разработкой и разработкой программного обеспечения. Владею английским языком на достаточно высоком уровне. Люблю осваивать новые технологии и подходы в разработке.</h3>
+					<h3>C#/.NET разработчик, web разработчик.<br> Живу в Москве. Занимаюсь web разработкой и разработкой программного обеспечения. Владею английским языком на достаточно высоком уровне. Люблю осваивать новые технологии и подходы в разработке.</h3>
 					<hr>
 				</header>
 				<section id="skills">
 					<div class="papers">
 						<div class="section-content">
 							<h2>Профессиональные навыки</h2>
-							<p>Специализируюсь в области web разработки. Владею навыками frontend разработки (JavaScript, React, Redux, MobX, JQuery, HTML, CSS, Bootstrap, Material-UI, SCSS/SASS, Webpack, Babel). Уважаю хорошие UI/UX-решения.</p>
-							<p>Помимо этого занимаюсь разработкой программного обеспечения на C#/.NET (WinForms, ASP.NET).</p>
+							<p>Специализируюсь в области разработки программного обеспечения, backend разработки на C#/.NET (WinForms, ASP.NET MVC/WebAPI, ASP.NET Core, Entity Framework, WCF, WPF). Разрабатываю программное обеспечение с использованием стека технологий Microsoft.</p>
+							<p>Владею навыками frontend разработки (JavaScript, React, Redux, MobX, JQuery, HTML, CSS, Bootstrap, SCSS/SASS, Webpack, Babel). Уважаю хорошие UI/UX-решения.</p>
 							<p>В разное время писал на PHP, Python, C++, C, MATLAB.</p>
 							<p>Хорошо разбираюсь в парадигме ООП, паттернах проектирования, алгоритмах и структурах данных. Умею работать с многопоточностью и асинхронным программированием.</p>
 							<p>В качестве среды разработки использую MS Visual Studio и WebStorm. Люблю использовать редактор Visual Studio Code. Также использую Postman и Swagger для работы с API и документирования API соответственно. Умею работать с Git.</p>
